tests/negative/import_show1_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

import .import_show1_b
export *

a:
  return "a"
